IE 11 Fix / Scrollbar issues fixed

--- a/scripts/L.Control.BottomMenu.css
+++ b/scripts/L.Control.BottomMenu.css
@@ -168,7 +168,7 @@
 }
 
 .leaflet-bottommenu-contents::-webkit-scrollbar { 
-    display: none; 
+     
 }
 
 #menu-custom-content {
